--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -3,11 +3,74 @@
 <html class="no-js" lang="">
     @@include('../html_partials/common/head.html')
     <body>
+      @@include('../html_partials/common/svg_sprite_embed.html')
+        <main class="main">
+          <header>
+            <h1>HIPAA Audit Tool</h1>
+          </header>
+          
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
 
+        @@include('../html_partials/tables/reports_table.html')
+
+        <button class="btn primary">Click Me</button>
+
+        <a class="btn primary">Click me</a>
+
+        <form>
+          <legend>form</legend>
+          <label>label</label>
+          <input type="text" placeholder="form"></form>
+      </form>
+
+
+      <div class="flex">
+        <input type="radio" class="toggle" id="approve-toggle" name="audit-controls" value="approve">
+        <label for="approve-toggle"><span class="hidden">Approve</span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="icn">
+            <use href="#icn-check"/> 
+          </svg>
+          <span class="hidden">Flag</span>
+        </label>
+      
+
+        <input type="radio" id="flag-toggle" class="toggle" name="audit-controls" value="flag">
+        <label for="flag-toggle">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icn">
+            <use href="#icn-flag"/> 
+          </svg>
+          <span class="hidden">Flag</span>
+        </label>
+      </div>
+
+      <a href="" class="btn round">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icn">
+          <use href="#icn-left"/> 
+        </svg>
+      </a>
+
+      <a href="" class="btn round">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icn">
+          <use href="#icn-right"/> 
+        </svg>
+      </a>
+
+      <a href="" class="btn round small">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icn">
+          <use href="#icn-download"/> 
+        </svg>
+      </a>
+
+      <a href="" class="btn round small">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icn">
+          <use href="#icn-close"/> 
+        </svg>
+      </a>
+
+          </main>
     </body>
     @@include('../html_partials/common/js_links.html')
+
     <script>
     (function() {
       "use strict";
