Adds markup and CSS for all three views. Modularizes HTML.

--- a/source/sass/main_styles.scss
+++ b/source/sass/main_styles.scss
@@ -51,10 +51,10 @@ MIT License
 /* Helpers - Added value to each file. (Optional) 
 ========================================================================== */
 
-@import 'helpers/_ie-support.scss';
+// @import 'helpers/_ie-support.scss';
 @import 'helpers/_color-palette.scss';
-@import 'helpers/_font-awesome.scss';
-@import 'helpers/_render-gradients.scss';
+// @import 'helpers/_font-awesome.scss';
+// @import 'helpers/_render-gradients.scss';
 
 
 /* MODULES - Individual site elements. 
@@ -80,10 +80,10 @@ MIT License
 /* Theme - Theme styles for each area of the site. 
 ========================================================================== */
 
-@import 'theme/_header.scss';
-@import 'theme/_menu.scss';
-@import 'theme/_main.scss';
-@import 'theme/_footer.scss';
+// @import 'theme/_header.scss';
+// @import 'theme/_menu.scss';
+// @import 'theme/_main.scss';
+// @import 'theme/_footer.scss';
 
 
 
