--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -4,24 +4,20 @@
     @@include('../html_partials/common/head.html')
     <body>
       @@include('../html_partials/common/svg_sprite_embed.html')
+ 
+        @@include('../html_partials/common/header.html')
+
         <main class="main">
-          <header>
-            <h1>HIPAA Audit Tool</h1>
-          </header>
-          
+ 
         <!-- Add your site or application content here -->
+        <!-- @@include('../html_partials/audit_view/audit-view.html') -->
+ 
+        <!-- @@include('../html_partials/reports_view/reports_view.html')  -->
 
-        @@include('../html_partials/tables/reports_table.html')
+        @@include('../html_partials/single_view/single_view.html')   
 
-        <button class="btn primary">Click Me</button>
 
-        <a class="btn primary">Click me</a>
-
-        <form>
-          <legend>form</legend>
-          <label>label</label>
-          <input type="text" placeholder="form"></form>
-      </form>
+        <!-- 
 
 
       <div class="flex">
@@ -30,7 +26,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" class="icn">
             <use href="#icn-check"/> 
           </svg>
-          <span class="hidden">Flag</span>
+          <span class="hidden">Flag</span>  
         </label>
       
 
@@ -52,8 +48,8 @@
       <a href="" class="btn round">
         <svg xmlns="http://www.w3.org/2000/svg" class="icn">
           <use href="#icn-right"/> 
-        </svg>
-      </a>
+        </svg>   
+      </a>    
 
       <a href="" class="btn round small">
         <svg xmlns="http://www.w3.org/2000/svg" class="icn">
@@ -64,8 +60,8 @@
       <a href="" class="btn round small">
         <svg xmlns="http://www.w3.org/2000/svg" class="icn">
           <use href="#icn-close"/> 
-        </svg>
-      </a>
+        </svg>  
+      </a> -->
 
           </main>
     </body>
