--- a/source/sass/partials/_app_basics.scss
+++ b/source/sass/partials/_app_basics.scss
@@ -23,6 +23,12 @@
 .cozy {
   margin-bottom:12px;
 }
+.comfy {
+  margin-bottom:18px;
+}
+.loose {
+  margin-bottom:24px;
+}
 .r-tight {
   margin-right:6px;
 }
@@ -31,6 +37,18 @@
 }
 .flex {
   display:flex;
+  &.space-between {
+    justify-content: space-between;
+  }
+  &.vert-center {
+    align-items: center;
+  }
+  &.bottom {
+    align-items: flex-end;
+  }
+  &.center {
+    justify-content: center;
+  }
 }
 .flex-centered {
   display:flex;
@@ -49,24 +67,24 @@
   left:-1000000px;
 }
 
-h1 {
-    font-family: "Open Sans", fontstack("Arial");
-    font-size:em(32);
-    border:rem(1) solid red;
-}
+// h1 {
+//     font-family: "Open Sans", fontstack("Arial");
+//     font-size:em(32);
+//     border:rem(1) solid red;
+// }
 
-h2 {
-    font-family: "Droid Sans", fontstack("Extra Stack");
-    font-size:rem(32);
-    padding:rem(32), rem(20), rem(15), rem(0);
-}
+// h2 {
+//     font-family: "Droid Sans", fontstack("Extra Stack");
+//     font-size:rem(32);
+//     padding:rem(32), rem(20), rem(15), rem(0);
+// }
 
 
 .main {
   max-width:rem(1440);
   margin:auto;
-  border:1px solid red;
   height:6000px;
+  padding-top:36px;
 }
 
 
@@ -76,10 +94,11 @@ h2 {
   border-radius: 5px;
   border:1px solid $c-primary;
   letter-spacing: .05rem;
-  font-size:16px;
+  font-size:14px;
   max-width:140px;
   display:block;
   width:100%;
+  height:37px;
   &.primary {
     background-color:$c-primary;
     color:$white;
@@ -190,3 +209,68 @@ tbody {
 // thead {
 //   border-bottom:2px solid $c-med;
 // }
+
+form {
+  margin:0;
+}
+// body {
+//   font-size:16px;
+// }
+
+p, nav {
+  font-size:1rem;
+}
+
+.header {
+  background-color:$c-x-x-light;
+  .inside {
+    max-width:rem(1440);
+    margin:0 auto;
+  }
+}
+
+.backdrop {
+  width:0px;
+  height:0px;
+  overflow: hidden;
+  position:absolute;
+  right:-10000000000px;
+  &.active {
+    width:100vw;
+    height:100vh;
+    position: fixed;
+    top:0;
+    left:0;
+    background-color: rgba($black, .8);
+  }
+
+
+}
+
+.modal {
+  width:100vw;
+  height:100vh;
+  border:1px solid red;
+  padding-top: 12px;
+}
+.viewer-container {
+  border:1px solid blue;
+  width:100vw;
+  height:85vh;
+}
+
+.page-viewer {
+  height:85vh;
+  width: calc(85vh*.7727);
+  border:1px solid white;
+}
+
+.close-button {
+  position: absolute;
+  right:12px;
+  top:12px;
+}
+
+.page-controls {
+  border:1px solid green;
+}
