--- a/source/sass/partials/_app_basics.scss
+++ b/source/sass/partials/_app_basics.scss
@@ -143,13 +143,13 @@ a.btn {
   cursor: pointer;
   &.round {
       display:block;
-      width:60px;
-      height:60px;
+      width:48px;
+      height:48px;
       background-color: $c-med;
       border-radius:50%;
       margin:0 12px 12px;
       border-width:0px;
-      padding:21px;
+      padding:15px;
       &.small {
         width:40px;
         height:40px;
@@ -170,19 +170,27 @@ a {
 .toggle[type="radio"] {
   position: absolute;
   left:-1000000000px;
-  border:1px solid red;
+  // border:1px solid red;
     &+label {
       display:block;
-      width:60px;
-      height:60px;
+      width:48px;
+      height:48px;
       background-color: $c-med;
       border-radius:50%;
       margin:0 12px 12px;
-      padding:21px;
+      padding:15px;
   }
   &:checked {
     &+label {
-      background-color:red;
+      background-color:$c-primary;
+      &:hover {
+        background-color: $c-primary;
+      }
+    }
+  }
+  &:hover {
+    &+label {
+      background-color: $c-primary-hover;
     }
   }
 }
@@ -262,19 +270,29 @@ p, nav {
 .modal {
   width:100vw;
   height:100vh;
-  border:1px solid red;
+  // border:1px solid red;
   padding-top: 12px;
+  display:grid;
+  grid-template-rows: 36px max-content 100px;
+}
+.header-single {
+  grid-row-start: 1;
+  grid-row-end: 2;
 }
 .viewer-container {
-  border:1px solid blue;
+  // border:1px solid blue;
   width:100vw;
-  height:85vh;
+  // height:85vh;
+  grid-row-start: 2;
+  grid-row-end: 3;
 }
 
+$page-height: calc(100vh - 136px);
+
 .page-viewer {
-  height:85vh;
-  width: calc(85vh*.7727);
-  border:1px solid white;
+  height:$page-height;
+  width: calc((100vh - 136px)*.7727);
+  // border:1px solid white;
 }
 
 .close-button {
@@ -284,24 +302,22 @@ p, nav {
 }
 
 .page-controls {
-  border:1px solid green;
+  // border:4px solid green;
   height:calc(15vh-48px);
+  // background-color: $c-dark;
+  border-top:1px solid $c-med;
 }
 
 .notes-field {
-  max-width:400px;
+  max-width:450px;
   width:100%;
-  border:1px solid red;
-  padding:12px 0;
+  // border:1px solid red;
+  padding:6px 0;
   input {
     width:100%;
-    height:60px;
+    // height:60px;
+    margin:0;
   }
-}
-
-#the-canvas {
-  border: 1px solid yellow;
-  direction: ltr;
 }
 
 .center {
