--- a/source/sass/partials/_app_basics.scss
+++ b/source/sass/partials/_app_basics.scss
@@ -1,22 +1,22 @@
-.one-column {
-  width:100%;
-}
-.spacer-1 {
-  height:rem(10);
-  width:100%;
-}
-.spacer-2 {
-  height:rem(20);
-  width:100%;
-}
-.spacer-3 {
-  height:rem(30);
-  width:100%;
-}
-.spacer-4 {
-  height:rem(40);
-  width:100%;
-}
+// .one-column {
+//   width:100%;
+// }
+// .spacer-1 {
+//   height:rem(10);
+//   width:100%;
+// }
+// .spacer-2 {
+//   height:rem(20);
+//   width:100%;
+// }
+// .spacer-3 {
+//   height:rem(30);
+//   width:100%;
+// }
+// .spacer-4 {
+//   height:rem(40);
+//   width:100%;
+// }
 .tight {
   margin-bottom:6px;
 }
@@ -79,24 +79,52 @@
   left:-1000000px;
 }
 
-// h1 {
-//     font-family: "Open Sans", fontstack("Arial");
-//     font-size:em(32);
-//     border:rem(1) solid red;
-// }
+.body {
+  display:grid;
+  grid-template-rows: 72px max-content;
+  row-gap:24px;
+  grid-template-columns: auto minmax(1100px, 1600px) auto;
+  font-family: "Open Sans",Helvetica Neue,Helvetica,Arial,sans-serif; 
+  color:$black;
+}
 
-// h2 {
-//     font-family: "Droid Sans", fontstack("Extra Stack");
-//     font-size:rem(32);
-//     padding:rem(32), rem(20), rem(15), rem(0);
-// }
-
+.header {
+  background-color:$c-x-x-light;
+  grid-row: 1 / 2;
+  grid-column: 1 / 4;
+  display:grid;
+  grid-template-columns: auto minmax(1100px, 1600px) auto;
+  .inside {
+    margin:0 auto;
+    grid-column: 2 / 3;
+    width:100%;
+    h1 {
+      margin:0;
+    }
+    figure {
+      margin:0;
+      padding:0px;
+      width:170px;
+      margin-right:24px;
+    }
+    .logo-container {
+      width:700px;
+      height:60px;
+    }
+    .header-logo {
+      height:30px;
+      width:150px;
+      margin-top:8px;
+    }
+  }
+}
 
 .main {
-  max-width:rem(1440);
   margin:auto;
   height:6000px;
-  padding-top:36px;
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  width:100%;
 }
 
 
@@ -159,18 +187,24 @@ a.btn {
 }
 
 a {
-  &.icn {
+  &.icn-wrapper {
     width:20px;
     height:20px;
     display:block;
-    border:1px solid red;
+    .icn {
+      fill:$c-primary;
+    }
+    &:hover {
+      .icn {
+        fill:$c-primary-hover;
+      }
+    }
   }
 }
 
 .toggle[type="radio"] {
   position: absolute;
   left:-1000000000px;
-  // border:1px solid red;
     &+label {
       display:block;
       width:48px;
@@ -195,9 +229,12 @@ a {
   }
 }
 .icn {
-  fill:$white;
-  width:18px;
-  height:18px;
+  fill:$c-light;
+  width:20px;
+  height:20px;
+  &.alert {
+    fill:$negative;
+  }
 }
 
 td.tg-0pky {
@@ -241,13 +278,6 @@ p, nav {
   font-size:1rem;
 }
 
-.header {
-  background-color:$c-x-x-light;
-  .inside {
-    max-width:rem(1440);
-    margin:0 auto;
-  }
-}
 
 .backdrop {
   width:0px;
@@ -270,21 +300,16 @@ p, nav {
 .modal {
   width:100vw;
   height:100vh;
-  // border:1px solid red;
   padding-top: 12px;
   display:grid;
   grid-template-rows: 36px max-content 100px;
 }
 .header-single {
-  grid-row-start: 1;
-  grid-row-end: 2;
+  grid-row: 1 / 2;
 }
 .viewer-container {
-  // border:1px solid blue;
   width:100vw;
-  // height:85vh;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row: 2 / 3;
 }
 
 $page-height: calc(100vh - 136px);
@@ -292,7 +317,6 @@ $page-height: calc(100vh - 136px);
 .page-viewer {
   height:$page-height;
   width: calc((100vh - 136px)*.7727);
-  // border:1px solid white;
 }
 
 .close-button {
@@ -302,20 +326,17 @@ $page-height: calc(100vh - 136px);
 }
 
 .page-controls {
-  // border:4px solid green;
   height:calc(15vh-48px);
-  // background-color: $c-dark;
   border-top:1px solid $c-med;
+  grid-row: 3 / 4;
 }
 
 .notes-field {
   max-width:450px;
   width:100%;
-  // border:1px solid red;
   padding:6px 0;
   input {
     width:100%;
-    // height:60px;
     margin:0;
   }
 }
