--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -8,15 +8,13 @@
         @@include('../html_partials/common/header.html')
 
         <main class="main">
- 
-        <!-- Add your site or application content here -->
-        @@include('../html_partials/audit_view/audit-view.html')
+        <!-- @@include('../html_partials/audit_view/audit-view.html') -->
  
         @@include('../html_partials/reports_view/reports_view.html') 
 
-        @@include('../html_partials/single_view/single_view.html')    
+        <!-- @@include('../html_partials/single_view/single_view.html')     -->
    
-          </main>
+        </main> 
     </body>
     @@include('../html_partials/common/js_links.html')
 
