Adds PDF view styles and markup into repo.

--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -12,7 +12,7 @@
  
         @@include('../html_partials/reports_view/reports_view.html') 
 
-        <!-- @@include('../html_partials/single_view/single_view.html')     -->
+        @@include('../html_partials/single_view/single_view.html')    
    
         </main> 
     </body>
