--- a/source/sass/partials/_single_viewer.scss
+++ b/source/sass/partials/_single_viewer.scss
@@ -42,14 +42,36 @@ $tools-height:100px;
     grid-template-columns: 50% 50%;
     grid-template-areas:
     "left right";
+    overflow: hidden;
   }
   .page-viewer {
+    overflow-y: scroll;
+    // border:1px solid red;
+    background-color: rgba($c-med, .2);
+    width:100%;
     &.left {
       grid-area:left;
     }
     &.right {
       grid-area: right;
     }
+  }
+  .page-wrapper {
+    position: relative;
+    width:100%;
+    height:85%;
+    margin-bottom:24px;
+    padding:0 42px 0;
+    margin-top:24px;
+    // border:1px solid blue;
+  }
+  .button-wrapper {
+    position: absolute;
+    bottom:0px;
+    // border:1px solid red;
+    width:calc(100% - 82px);
+    background-color: #404040;
+    padding:12px;
   }
   .close-button {
     position: absolute;
